// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden replay > ダブルシュート トリプル弾 谷 追い風 3 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 17137664,
        "y": 10518528,
      },
      "steps": 112,
    },
    {
      "last": {
        "x": 16613376,
        "y": 10846208,
      },
      "steps": 105,
    },
    {
      "last": {
        "x": 15958016,
        "y": 11304960,
      },
      "steps": 99,
    },
    {
      "last": {
        "x": 17399808,
        "y": 10846208,
      },
      "steps": 114,
    },
    {
      "last": {
        "x": 16875520,
        "y": 11173888,
      },
      "steps": 107,
    },
    {
      "last": {
        "x": 16220160,
        "y": 11632640,
      },
      "steps": 101,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 261,
          "y": 160,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 261,
          "cy": 160,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 253,
          "y": 165,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 1,
        "stage": 0,
        "terrainOp": {
          "cx": 253,
          "cy": 165,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 243,
          "y": 172,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 2,
        "stage": 0,
        "terrainOp": {
          "cx": 243,
          "cy": 172,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 265,
          "y": 165,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 3,
        "stage": 0,
        "terrainOp": {
          "cx": 265,
          "cy": 165,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 257,
          "y": 170,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 4,
        "stage": 0,
        "terrainOp": {
          "cx": 257,
          "cy": 170,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 247,
          "y": 177,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 5,
        "stage": 0,
        "terrainOp": {
          "cx": 247,
          "cy": 177,
          "radius": 6,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "item": "double",
      "power": 72,
      "seat": 0,
      "weapon": "triple",
      "wind": 3,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > ダブルシュート 壁の中で爆発 落ちた後から撃つ 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 6848512,
        "y": 9535488,
      },
      "steps": 1,
    },
    {
      "last": {
        "x": 7307264,
        "y": 10059776,
      },
      "steps": 5,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      69,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 104,
          "y": 145,
        },
        "damage": [
          26,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 104,
          "cy": 145,
          "radius": 10,
        },
      },
      {
        "cell": {
          "x": 111,
          "y": 153,
        },
        "damage": [
          5,
          0,
        ],
        "projectile": 1,
        "stage": 0,
        "terrainOp": {
          "cx": 111,
          "cy": 153,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "item": "double",
      "power": 50,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 100,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      100,
      300,
    ],
    "yAfter": [
      155,
      130,
    ],
  },
}
`;

exports[`golden replay > ダブルシュート 平地 穴に落ちた相手へもう一度 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 9469952,
        "y": 9863168,
      },
      "steps": 68,
    },
    {
      "last": {
        "x": 9797632,
        "y": 10256384,
      },
      "steps": 72,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      45,
    ],
    "impacts": [
      {
        "cell": {
          "x": 144,
          "y": 150,
        },
        "damage": [
          0,
          20,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 144,
          "cy": 150,
          "radius": 10,
        },
      },
      {
        "cell": {
          "x": 149,
          "y": 156,
        },
        "damage": [
          0,
          35,
        ],
        "projectile": 1,
        "stage": 0,
        "terrainOp": {
          "cx": 149,
          "cy": 156,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "item": "double",
      "power": 50,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      150,
    ],
    "yAfter": [
      150,
      166,
    ],
  },
}
`;

exports[`golden replay > テレポート 平地 右端から右へ 消失 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 26075858,
        "y": 9485527,
      },
      "steps": 2,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [],
    "input": {
      "elevation": 10,
      "facing": 1,
      "item": "teleport",
      "power": 100,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 390,
      "y": 150,
    },
    "ringOut": [],
    "teleport": null,
    "xAfter": [
      390,
      60,
    ],
    "yAfter": [
      150,
      150,
    ],
  },
}
`;

exports[`golden replay > テレポート 平地 相手に当たって隣へ 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4751360,
        "y": 9469952,
      },
      "steps": 7,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [],
    "input": {
      "elevation": 10,
      "facing": 1,
      "item": "teleport",
      "power": 40,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "teleport": {
      "x": 71,
      "y": 150,
    },
    "xAfter": [
      71,
      72,
    ],
    "yAfter": [
      150,
      150,
    ],
  },
}
`;

exports[`golden replay > テレポート 谷 基本の直接射撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 16351232,
        "y": 11042816,
      },
      "steps": 106,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [],
    "input": {
      "elevation": 45,
      "facing": 1,
      "item": "teleport",
      "power": 72,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "teleport": {
      "x": 249,
      "y": 168,
    },
    "xAfter": [
      249,
      340,
    ],
    "yAfter": [
      168,
      140,
    ],
  },
}
`;

exports[`golden replay > トリプル弾 平地 至近で 3 発をまとめて当てる 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4751360,
        "y": 9601024,
      },
      "steps": 13,
    },
    {
      "last": {
        "x": 4751360,
        "y": 9601024,
      },
      "steps": 12,
    },
    {
      "last": {
        "x": 4685824,
        "y": 9666560,
      },
      "steps": 12,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      61,
    ],
    "impacts": [
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          13,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          13,
        ],
        "projectile": 1,
        "stage": 0,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 71,
          "y": 147,
        },
        "damage": [
          0,
          13,
        ],
        "projectile": 2,
        "stage": 0,
        "terrainOp": {
          "cx": 71,
          "cy": 147,
          "radius": 6,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 20,
      "seat": 0,
      "weapon": "triple",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      72,
    ],
    "yAfter": [
      150,
      153,
    ],
  },
}
`;

exports[`golden replay > トリプル弾 谷 基本の直接射撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 16875520,
        "y": 10649600,
      },
      "steps": 113,
    },
    {
      "last": {
        "x": 16351232,
        "y": 11042816,
      },
      "steps": 106,
    },
    {
      "last": {
        "x": 15761408,
        "y": 11436032,
      },
      "steps": 100,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 257,
          "y": 162,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 257,
          "cy": 162,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 249,
          "y": 168,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 1,
        "stage": 0,
        "terrainOp": {
          "cx": 249,
          "cy": 168,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 240,
          "y": 174,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 2,
        "stage": 0,
        "terrainOp": {
          "cx": 240,
          "cy": 174,
          "radius": 6,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "triple",
      "wind": 0,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > マルチ弾 谷 追い風 10 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 17661952,
        "y": 10125312,
      },
      "steps": 110,
    },
    {
      "last": {
        "x": 17072128,
        "y": 10518528,
      },
      "steps": 103,
    },
    {
      "last": {
        "x": 16351232,
        "y": 11042816,
      },
      "steps": 97,
    },
    {
      "last": {
        "x": 17793024,
        "y": 10321920,
      },
      "steps": 111,
    },
    {
      "last": {
        "x": 17203200,
        "y": 10715136,
      },
      "steps": 104,
    },
    {
      "last": {
        "x": 16547840,
        "y": 11108352,
      },
      "steps": 98,
    },
    {
      "last": {
        "x": 17989632,
        "y": 10452992,
      },
      "steps": 112,
    },
    {
      "last": {
        "x": 17399808,
        "y": 10846208,
      },
      "steps": 105,
    },
    {
      "last": {
        "x": 16678912,
        "y": 11304960,
      },
      "steps": 99,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 269,
          "y": 154,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 269,
          "cy": 154,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 260,
          "y": 160,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 1,
        "stage": 0,
        "terrainOp": {
          "cx": 260,
          "cy": 160,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 249,
          "y": 168,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 2,
        "stage": 0,
        "terrainOp": {
          "cx": 249,
          "cy": 168,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 271,
          "y": 157,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 3,
        "stage": 0,
        "terrainOp": {
          "cx": 271,
          "cy": 157,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 262,
          "y": 163,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 4,
        "stage": 0,
        "terrainOp": {
          "cx": 262,
          "cy": 163,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 252,
          "y": 169,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 5,
        "stage": 0,
        "terrainOp": {
          "cx": 252,
          "cy": 169,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 274,
          "y": 159,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 6,
        "stage": 0,
        "terrainOp": {
          "cx": 274,
          "cy": 159,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 265,
          "y": 165,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 7,
        "stage": 0,
        "terrainOp": {
          "cx": 265,
          "cy": 165,
          "radius": 3,
        },
      },
      {
        "cell": {
          "x": 254,
          "y": 172,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 8,
        "stage": 0,
        "terrainOp": {
          "cx": 254,
          "cy": 172,
          "radius": 3,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "multiple",
      "wind": 10,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > レーザー弾 平地 直撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4751360,
        "y": 9601024,
      },
      "steps": 13,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      58,
    ],
    "impacts": [
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 1,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 2,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 3,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 4,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 5,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          6,
        ],
        "projectile": 0,
        "stage": 6,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 20,
      "seat": 0,
      "weapon": "laser",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      72,
    ],
    "yAfter": [
      150,
      151,
    ],
  },
}
`;

exports[`golden replay > レーザー弾 平地 足元を掘り抜く 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 13271040,
        "y": 11829248,
      },
      "steps": 217,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 202,
          "y": 150,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 202,
          "cy": 150,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 202,
          "y": 155,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 1,
        "terrainOp": {
          "cx": 202,
          "cy": 155,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 202,
          "y": 160,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 2,
        "terrainOp": {
          "cx": 202,
          "cy": 160,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 202,
          "y": 165,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 3,
        "terrainOp": {
          "cx": 202,
          "cy": 165,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 202,
          "y": 170,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 4,
        "terrainOp": {
          "cx": 202,
          "cy": 170,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 202,
          "y": 175,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 5,
        "terrainOp": {
          "cx": 202,
          "cy": 175,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 202,
          "y": 180,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 6,
        "terrainOp": {
          "cx": 202,
          "cy": 180,
          "radius": 4,
        },
      },
    ],
    "input": {
      "elevation": 80,
      "facing": 1,
      "power": 82,
      "seat": 0,
      "weapon": "laser",
      "wind": 0,
      "x": 100,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      100,
      200,
    ],
    "yAfter": [
      150,
      184,
    ],
  },
}
`;

exports[`golden replay > レーザー弾 谷 向かい風 10 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 18841600,
        "y": 11436032,
      },
      "steps": 149,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 275,
          "y": 150,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 275,
          "cy": 150,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 277,
          "y": 154,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 1,
        "terrainOp": {
          "cx": 277,
          "cy": 154,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 279,
          "y": 158,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 2,
        "terrainOp": {
          "cx": 279,
          "cy": 158,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 281,
          "y": 162,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 3,
        "terrainOp": {
          "cx": 281,
          "cy": 162,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 283,
          "y": 166,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 4,
        "terrainOp": {
          "cx": 283,
          "cy": 166,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 285,
          "y": 170,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 5,
        "terrainOp": {
          "cx": 285,
          "cy": 170,
          "radius": 4,
        },
      },
      {
        "cell": {
          "x": 287,
          "y": 174,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 6,
        "terrainOp": {
          "cx": 287,
          "cy": 174,
          "radius": 4,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "laser",
      "wind": -10,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 上り坂 +45 度 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 9273344,
        "y": 7241728,
      },
      "steps": 81,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 141,
          "y": 110,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 141,
          "cy": 110,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 30,
      "facing": 1,
      "power": 60,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 100,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      100,
      300,
    ],
    "yAfter": [
      150,
      110,
    ],
  },
}
`;

exports[`golden replay > 下り坂 -45 度 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 9404416,
        "y": 12484608,
      },
      "steps": 28,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 143,
          "y": 190,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 143,
          "cy": 190,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 50,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 100,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      100,
      300,
    ],
    "yAfter": [
      150,
      190,
    ],
  },
}
`;

exports[`golden replay > 壁の中で爆発 自爆 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 6848512,
        "y": 9535488,
      },
      "steps": 1,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      74,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 104,
          "y": 145,
        },
        "damage": [
          26,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 104,
          "cy": 145,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 50,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 100,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      100,
      300,
    ],
    "yAfter": [
      155,
      130,
    ],
  },
}
`;

exports[`golden replay > 平地 右端から右へ 消失 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 26075858,
        "y": 9485527,
      },
      "steps": 2,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 100,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 390,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      390,
      60,
    ],
    "yAfter": [
      150,
      150,
    ],
  },
}
`;

exports[`golden replay > 平地 最小仰角 最小パワー 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4227072,
        "y": 9863168,
      },
      "steps": 16,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      77,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 64,
          "y": 150,
        },
        "damage": [
          23,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 64,
          "cy": 150,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 0,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      160,
      150,
    ],
  },
}
`;

exports[`golden replay > 平地 直撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4751360,
        "y": 9601024,
      },
      "steps": 12,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      65,
    ],
    "impacts": [
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          35,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 20,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      72,
    ],
    "yAfter": [
      150,
      157,
    ],
  },
}
`;

exports[`golden replay > 平地 真上 最大パワー 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 13139968,
        "y": 9601024,
      },
      "steps": 177,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      65,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 200,
          "y": 146,
        },
        "damage": [
          35,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 200,
          "cy": 146,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 90,
      "facing": 1,
      "power": 100,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 200,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      200,
      340,
    ],
    "yAfter": [
      157,
      150,
    ],
  },
}
`;

exports[`golden replay > 掘削弾 平地 直撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4685824,
        "y": 9666560,
      },
      "steps": 13,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      88,
      78,
    ],
    "impacts": [
      {
        "cell": {
          "x": 71,
          "y": 147,
        },
        "damage": [
          12,
          22,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 71,
          "cy": 147,
          "radius": 20,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 20,
      "seat": 0,
      "weapon": "digger",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      72,
    ],
    "yAfter": [
      164,
      167,
    ],
  },
}
`;

exports[`golden replay > 浮島 奈落へ 消失 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 10815365,
        "y": 14606927,
      },
      "steps": 48,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 30,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 118,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      118,
      340,
    ],
    "yAfter": [
      150,
      150,
    ],
  },
}
`;

exports[`golden replay > 浮島 相手の足元を狙う 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 20742144,
        "y": 9863168,
      },
      "steps": 121,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 316,
          "y": 150,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 316,
          "cy": 150,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 50,
      "facing": 1,
      "power": 88,
      "seat": 0,
      "weapon": "cannon",
      "wind": -2,
      "x": 80,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      80,
      300,
    ],
    "yAfter": [
      150,
      150,
    ],
  },
}
`;

exports[`golden replay > 浮遊弾 谷 向かい風 10 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 12091392,
        "y": 12419072,
      },
      "steps": 160,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 184,
          "y": 189,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 184,
          "cy": 189,
          "radius": 12,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "floater",
      "wind": -10,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 谷 向かい風 10 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 15564800,
        "y": 11567104,
      },
      "steps": 109,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 237,
          "y": 176,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 237,
          "cy": 176,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "cannon",
      "wind": -10,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 谷 基本の直接射撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 16351232,
        "y": 11042816,
      },
      "steps": 106,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 249,
          "y": 168,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 249,
          "cy": 168,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 谷 山越えの高角度 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 12550144,
        "y": 12746752,
      },
      "steps": 189,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 191,
          "y": 194,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 191,
          "cy": 194,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 80,
      "facing": 1,
      "power": 100,
      "seat": 0,
      "weapon": "cannon",
      "wind": 3,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 谷 左向きから 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 9928704,
        "y": 11042816,
      },
      "steps": 106,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 151,
          "y": 168,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 151,
          "cy": 168,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": -1,
      "power": 72,
      "seat": 0,
      "weapon": "cannon",
      "wind": 0,
      "x": 340,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      340,
      60,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 谷 追い風 10 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 17072128,
        "y": 10518528,
      },
      "steps": 103,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 260,
          "y": 160,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 260,
          "cy": 160,
          "radius": 10,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "cannon",
      "wind": 10,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 貫通弾 壁の中で爆発 自爆 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 7831552,
        "y": 9469952,
      },
      "steps": 10,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      87,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 104,
          "y": 145,
        },
        "damage": [
          13,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 104,
          "cy": 145,
          "radius": 8,
        },
      },
      {
        "cell": {
          "x": 112,
          "y": 144,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 1,
        "terrainOp": {
          "cx": 112,
          "cy": 144,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 119,
          "y": 144,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 2,
        "terrainOp": {
          "cx": 119,
          "cy": 144,
          "radius": 4,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 50,
      "seat": 0,
      "weapon": "drill",
      "wind": 0,
      "x": 100,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      100,
      300,
    ],
    "yAfter": [
      152,
      130,
    ],
  },
}
`;

exports[`golden replay > 貫通弾 平地 直撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4751360,
        "y": 9601024,
      },
      "steps": 12,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      56,
    ],
    "impacts": [
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          22,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 8,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          14,
        ],
        "projectile": 0,
        "stage": 1,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          8,
        ],
        "projectile": 0,
        "stage": 2,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 4,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 20,
      "seat": 0,
      "weapon": "drill",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      72,
    ],
    "yAfter": [
      150,
      155,
    ],
  },
}
`;

exports[`golden replay > 貫通弾 谷 基本の直接射撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 16941056,
        "y": 11829248,
      },
      "steps": 111,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      100,
    ],
    "impacts": [
      {
        "cell": {
          "x": 249,
          "y": 168,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 249,
          "cy": 168,
          "radius": 8,
        },
      },
      {
        "cell": {
          "x": 254,
          "y": 175,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 1,
        "terrainOp": {
          "cx": 254,
          "cy": 175,
          "radius": 6,
        },
      },
      {
        "cell": {
          "x": 258,
          "y": 180,
        },
        "damage": [
          0,
          0,
        ],
        "projectile": 0,
        "stage": 2,
        "terrainOp": {
          "cx": 258,
          "cy": 180,
          "radius": 4,
        },
      },
    ],
    "input": {
      "elevation": 45,
      "facing": 1,
      "power": 72,
      "seat": 0,
      "weapon": "drill",
      "wind": 0,
      "x": 60,
      "y": 140,
    },
    "ringOut": [],
    "xAfter": [
      60,
      340,
    ],
    "yAfter": [
      140,
      140,
    ],
  },
}
`;

exports[`golden replay > 針弾 平地 直撃 1`] = `
{
  "paths": [
    {
      "last": {
        "x": 4751360,
        "y": 9601024,
      },
      "steps": 12,
    },
  ],
  "result": {
    "finished": null,
    "hpAfter": [
      100,
      30,
    ],
    "impacts": [
      {
        "cell": {
          "x": 72,
          "y": 146,
        },
        "damage": [
          0,
          70,
        ],
        "projectile": 0,
        "stage": 0,
        "terrainOp": {
          "cx": 72,
          "cy": 146,
          "radius": 3,
        },
      },
    ],
    "input": {
      "elevation": 10,
      "facing": 1,
      "power": 20,
      "seat": 0,
      "weapon": "stinger",
      "wind": 0,
      "x": 60,
      "y": 150,
    },
    "ringOut": [],
    "xAfter": [
      60,
      72,
    ],
    "yAfter": [
      150,
      150,
    ],
  },
}
`;
